use GraphQlTester for tests