@@ -33,6 +33,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework:spring-webflux'
+    testRuntimeOnly 'org.mockito:mockito-core'
     testImplementation 'org.springframework.graphql:spring-graphql-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -45,4 +47,15 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    doFirst {
+        def agentJar = configurations.testRuntimeClasspath.files.find {
+            it.name.startsWith('mockito-core')
+        }
+
+        jvmArgs += [
+                "-javaagent:${agentJar}",
+                "-Djdk.attach.allowAttachSelf"
+        ]
+    }
 }
